980 footer was too small - fixed it

--- a/assets/css/style_responsive_new_2.css
+++ b/assets/css/style_responsive_new_2.css
@@ -477,6 +477,12 @@ input#submit-button:hover {
 			width: 100%;
 			height: 100%;
 		}
+		.footer {
+			min-width: 100%;
+			height: auto;
+			width: 100%;
+			display: block;
+		}
 
 
     }
@@ -725,7 +731,7 @@ input#submit-button:hover {
 
 /* right hand side bar with connection information */
 		#ways-to-connect{
-			padding-left: 30%;
+			padding-left: 20%;
 		}
 		#connect-details {
 		    /* min-width: 100%; */
@@ -748,6 +754,7 @@ input#submit-button:hover {
 		#bio-and-content-section {
     		height: auto;
     		width: 90%;
+    		min-height: 800px;
    }
 		#about-me {
 			height: auto;
@@ -757,7 +764,7 @@ input#submit-button:hover {
 			margin-bottom: 20px;
 			padding-left: 20px;
 			height: auto;
-			min-height: 770px;
+			min-height: 850px;
 			overflow: auto;
 		}
 		#format-article {
